...con lentitud poderosa